[gd_scene load_steps=9 format=3 uid="uid://c2xxadce276pa"]

[ext_resource type="Script" path="res://Scripts/map_items/Doors.gd" id="1_8wsf0"]
[ext_resource type="Texture2D" uid="uid://bmvrstnkb2qr6" path="res://Assets/Images/Background/maps-assets.png" id="1_rpedj"]

[sub_resource type="RectangleShape2D" id="RectangleShape2D_3s2k6"]
size = Vector2(8, 8)

[sub_resource type="RectangleShape2D" id="RectangleShape2D_on3xg"]
size = Vector2(8, 8)

[sub_resource type="Animation" id="Animation_agag2"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(10, 5)]
}

[sub_resource type="Animation" id="Animation_558uq"]
resource_name = "closed"
length = 0.2
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [Vector2i(8, 5)]
}

[sub_resource type="Animation" id="Animation_rehuy"]
resource_name = "open_the_door"
length = 1.1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite:frame_coords")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.8),
"transitions": PackedFloat32Array(1, 1, 1),
"update": 1,
"values": [Vector2i(8, 5), Vector2i(9, 5), Vector2i(10, 5)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mw7tm"]
_data = {
"RESET": SubResource("Animation_agag2"),
"closed": SubResource("Animation_558uq"),
"open_the_door": SubResource("Animation_rehuy")
}

[node name="Door" type="StaticBody2D"]
y_sort_enabled = true
script = ExtResource("1_8wsf0")

[node name="Sprite" type="Sprite2D" parent="."]
texture = ExtResource("1_rpedj")
hframes = 19
vframes = 9
frame = 105

[node name="Shape" type="CollisionShape2D" parent="."]
shape = SubResource("RectangleShape2D_3s2k6")

[node name="Hit_Box_Area" type="Area2D" parent="."]
collision_layer = 4
collision_mask = 2

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hit_Box_Area"]
shape = SubResource("RectangleShape2D_on3xg")
debug_color = Color(0.835294, 0.321569, 0.564706, 0.419608)

[node name="open_the_door" type="AnimationPlayer" parent="."]
libraries = {
"": SubResource("AnimationLibrary_mw7tm")
}

[connection signal="area_entered" from="Hit_Box_Area" to="." method="_on_hit_box_area_area_entered"]
